# jarvis_v1

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  test.py  tests.sh
docs/: API.md
jarvis/: agent.py  autonomy_safe.py  brain.py  commands.py  context_engine.py  events.py  executor.py  executor_llm.py  gmail_api.py  llm.py  main.py  memory.py  modal_payload.py  observation.py  planner.py  prompts.py  queue.py  risk.py  risk_policy.py  router.py  security.py  server.py  shell_policy.py  telemetry.py  utils.py  ux.py  voice.py  voice_tools.py
jarvis/integrations/google/: gmail_api.py  gmail_query.py
jarvis/integrations/microsoft/: outlook_api.py  outlook_query.py
jarvis/skills/: base.py  capabilities.py  gmail_list_today.py  open_app.py  open_url.py  registry.py  run_shell.py
jarvis/skills/git/: _diff_insights.py  _diff_parser.py  _git.py  git_add_all.py  git_commit.py  git_diff_review.py  git_diff_validate.py  git_generate_patch.py  git_push.py  git_status.py
jarvis/skills/google/gmail/: _common.py
jarvis/skills/microsoft/outlook/: _common.py
jarvis/wizards/: gmail_oauth_wizard.py  outlook_oauth_wizard.py
jarvis_ai.egg-info/: PKG-INFO  SOURCES.txt
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  global.css
ui/src/components/: CenterStage.tsx  ControlBar.tsx  LeftSidebar.tsx  RightLog.tsx  VoiceOrb.tsx
ui/src/components/modal/: GitDiffReviewModal.tsx  SettingsModal.tsx
ui/src/components/orb/: OrbCore.tsx  (+4 more)
ui/src/hooks/: useAudioCapture.ts  useAudioPlayback.ts  useSkillBubbles.ts  useVoice.ts
(+24 files in other folders)
