[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Jarvis Personal AI Assistant"
requires-python = ">=3.10"

dependencies = [
    "openai",
    "python-dotenv",
    "google-auth-oauthlib",
    "google-api-python-client",
    "google-genai",
    "fastapi",
    "uvicorn",
    "websockets",
]

[project.scripts]
jarvis = "jarvis.main:main"